test/tests/compiler/18_structures/invalid_parse/extra_credit/plx1_union_member_none_array_2.plx
type union u1(x: i32, y: [2]none)

pub fn main(none) i32 {
    return 0
}
